k8s/default/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campusxchange-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: campusxchange.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campusxchange-ui-svc
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: campusxchange-api-svc
                port:
                  number: 8080
